--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,6 +12,12 @@
 			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
 		{% endblock %}
 	</head>
-</html></body>{% include "shared/_navbar.html.twig" %}<div class="container pt-5"> {% block body %}{% endblock %}
-</div>
-{% block javascripts %}{% endblock %}</body></html>
+	<body class="h-full bg-danger bg-gradient">
+
+		{% include "shared/_navbar.html.twig" %}
+		<div class="container-fluid pt-5"> {% block body %}{% endblock %}
+			</div>
+			{% block javascripts %}{% endblock %}
+
+		</body>
+	</html>
