--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,7 +12,7 @@
 			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
 		{% endblock %}
 	</head>
-	<body class="h-full bg-danger bg-gradient">
+	<body class="bg-danger bg-gradient bg-opacity-10">
 
 		{% include "shared/_navbar.html.twig" %}
 		<div class="container-fluid pt-5"> {% block body %}{% endblock %}
