--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,7 +11,7 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
 
 		{% block stylesheets %}{# <link
-																																	rel="stylesheet" href="https://bootswatch.com/5/lumen/bootstrap.min.css"> #}
+																																																rel="stylesheet" href="https://bootswatch.com/5/lumen/bootstrap.min.css"> #}
 			<!-- CSS only -->
 		{% endblock %}
 	</head>
@@ -19,7 +19,7 @@
 		class="bg-danger bg-gradient bg-opacity-10">
 
 		{#}	{% include "shared/_navbar.html.twig" %} {#}
-		<div class="container-fluid pt-5"> {% block body %}{% endblock %}
+		<div class="container pt-5"> {% block body %}{% endblock %}
 			</div>
 			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 			{% block javascripts %}{% endblock %}
