--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -3,14 +3,21 @@
 {% block body %}
 	<h1>Nos produits phares</h1>
 	<div class="row">
-		{% for i in 1..3 %}
+		{% for p in products %}
 			<div class="col">
 				<div class="card">
-					<img src="https://picsum.photos/200/200" class="img-fluid" alt="Image du produit">
+					<img src="{{p.image}}" class="img-fluid" alt="Image du produit">
 				</div>
 				<div class="card-body">
-					<h4 class="card-title">Superbe Chaise en Bois</h4>
-					<p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere, aut!</p>
+					<h4 class="card-title">{{p.nom}}
+						({{p.prix}}
+						&euro;)</h4>
+					<h5>
+						<span class="badge bg-dark">
+							{{p.getCategory().getNom()}}
+						</span>
+					</h5>
+					<p class="card-text">{{p.designation}}</p>
 					<a href="#" class="btn btn-primary btn-sm">Détails</a>
 					<a href="#" class="btn btn-success btn-sm">Ajouter</a>
 				</div>
