--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -18,7 +18,7 @@
 						</span>
 					</h5>
 					<p class="card-text">{{p.designation}}</p>
-					<a href="#" class="btn btn-primary btn-sm">Détails</a>
+					<a href=" {{path('product_show', {'category_slug' : p.category.slug, 'slug': p.slug} )}}" class="btn btn-primary btn-sm">Détails</a>
 					<a href="#" class="btn btn-success btn-sm">Ajouter</a>
 				</div>
 			</div>
