Css fait sur les 3 pages produits

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,7 +1,13 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-	<h1>Nos produits phares</h1>
+	<h1 style="color:black;text-shadow:
+									-1px -1px 0 #fff,
+									1px -1px 0 #fff,
+									-1px 1px 0 #fff,
+									1px 1px 0 #fff,
+									1px 1px 2px #141414;
+									color:#333;font-size: 3em;">NOS OFFRES SPÉCIALES !</h1>
 	<div class="row">
 		{% for p in products %}
 			<div class="col">
@@ -18,6 +24,7 @@
 						</span>
 					</h5>
 					<p class="card-text">{{p.designation}}</p>
+
 					<a href=" {{path('product_show', {'category_slug' : p.category.slug, 'slug': p.slug} )}}" class="btn btn-primary btn-sm">Détails</a>
 					<a href="#" class="btn btn-success btn-sm">Ajouter</a>
 				</div>
@@ -25,7 +32,9 @@
 		{% endfor %}
 	</div>
 	<hr>
-	<h2>Un service irréprochable</h2>
+	<h1 style="color:#e15a97; text-shadow: 2px 8px 6px rgba(0,0,0,0.2), 0px -5px 35px rgba(255,255,255,0.3), 1px 1px 1px rgba(0,0,0,0.7);">
+		<span class="badge bg-secondary">Un service irréprochable</span>
+	</h1>
 	<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere, aut! cum, hic? sed aperiam?</p>
 	<div class="row">
 		{% include "shared/_assurance.html.twig" with {
