--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,18 +7,19 @@
 			{% block title %}ACCUEIL
 			{% endblock %}
 		</title>
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+		<link
+		rel="stylesheet" href="https://bootswatch.com/5/quartz/bootstrap.min.css" class="rel">
+		{# <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous"> #}
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
 
 		{% block stylesheets %}{# <link
-																																																rel="stylesheet" href="https://bootswatch.com/5/lumen/bootstrap.min.css"> #}
+																																																																																																																																	rel="stylesheet" href="https://bootswatch.com/5/lumen/bootstrap.min.css"> #}
 			<!-- CSS only -->
 		{% endblock %}
 	</head>
-	<body
-		class="bg-danger bg-gradient bg-opacity-10">
-
-		{#}	{% include "shared/_navbar.html.twig" %} {#}
+	<body>
+		{# <body style="background-color : #ffffff;"> #}
+		{% include "shared/_navbar.html.twig" %}
 		<div class="container pt-5"> {% block body %}{% endblock %}
 			</div>
 			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
