--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,27 @@
 body {
-    background-color: lightgray;
+    color: #333;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 14px;
+    line-height: 1.42857143;
+    margin: 0;
+}
+
+.morph img {
+    width: 300px;
+    height: auto;
+    -webkit-filter: grayscale(0) blur(0px);
+    filter: grayscale(0) blur(0px);
+    -webkit-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+}
+
+.morph :hover img {
+    width: 300px;
+    /* on affiche l'image au carré */
+    height: 300px;
+    border-radius: 50%;
+    /* on arrondit l'image */
+    -webkit-transform: rotate(360deg);
+    /* rotation de l'image */
+    transform: rotate(360deg);
 }
