--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -22,25 +22,33 @@
 		€)</h1>
 	<div class="row">
 		<div class="col-4">
-			<img src="{{product.image}}" alt="{{product.nom}}" class="img-fluid" style="width: 600px; height:auto;">
-			<a href="#" class="btn btn-success btn-lg m-auto text-center mt-1">
-				<i class="fas fa-cart-plus"></i>
-				Ajouter au panier
-			</a>
+			<img src="{{product.image}}" alt="{{product.nom}}" class="img-fluid" style="width: 600px; height:auto; border-radius: 10%;">
+
 		</div>
-		<div class="col">
+		<div class="col-8">
+
+
 			<span class="badge bg-primary">
 				{{product.category.nom}}
 			</span>
-			<p>{{product.designation}}</p>
-			<div class="card border-warning mb-3" style="max-width: 18rem;">
-				<div class="card-header">Avis</div>
-				<div class="card-body">
-					<h5 class="card-title">****</h5>
-					<p class="card-text">{{product.avis}}</p>
-				</div>
-			</div>
 
+			<p>{{product.designation}}</p>
+			<div class="d-flex flex-row justify-between align-center">
+				<div class="card border-warning mb-3" style="max-width: 18rem;">
+					<div class="card-header">Avis</div>
+					<div class="card-body">
+						<h5 class="card-title">****</h5>
+						<p class="card-text">{{product.avis}}</p>
+					</div>
+				</div>
+
+				<span class="mx-5">
+					<a href="#" class="btn btn-success btn-lg m-auto text-center mt-1">
+						<i class="fas fa-cart-plus"></i>
+						Ajouter au panier
+					</a>
+				</span>
+			</div>
 		</div>
 	</div>
 {% endblock %}
