--- a/templates/product/category.html.twig
+++ b/templates/product/category.html.twig
@@ -16,8 +16,8 @@
 	</nav>
 
 	<h1 style="color:#e15a97; text-shadow: 2px 8px 6px rgba(0,0,0,0.2),
-																																																																			0px -5px 35px rgba(255,255,255,0.3),
-																																																																			1px 1px 1px rgba(0,0,0,0.7);">
+																																																																																																	0px -5px 35px rgba(255,255,255,0.3),
+																																																																																																	1px 1px 1px rgba(0,0,0,0.7);">
 		<span class="badge bg-dark">Catégorie :
 			{{category.nom}}</span>
 	</h1>
@@ -33,7 +33,7 @@
 						&euro;)</h4>
 					<h5>
 						<span class="badge bg-dark">
-							{{p.getCategory().getNom()}}
+							{{p.category.nom}}
 						</span>
 					</h5>
 					<p class="card-text">{{p.designation}}</p>
