--- a/templates/product/create.html.twig
+++ b/templates/product/create.html.twig
@@ -19,8 +19,8 @@
 		</div>
 		<div class="col">
 			{{ form_row(form.image) }}
-			{{ form_row(form.quantite) }}
-			{{ form_row(form.categorie) }}
+			{{ form_row(form.Qte) }}
+			{{ form_row(form.category) }}
 
 		</div>
 	</div>
