--- a/templates/registration.html.twig
+++ b/templates/registration.html.twig
@@ -38,10 +38,7 @@
 			<select class="form-select mb-2" aria-label="Default select example" name="role" required>
 				<option value="ROLE_USER" selected>Sélectioner un rôle</option>
 				<option value="ROLE_SUPER_ADMIN">Administrateur</option>
-				<option value="ROLE_COMPTA">Comptabilite</option>
-				<option value="ROLE_CHEF">Chef-chantier</option>
-				<option value="ROLE_CONDUCTEUR">Conducteur-Travaux</option>
-				<option value="ROLE_RESPONSABLE">Responsable</option>
+				<option value="ROLE_MOD">Modérateur</option>
 			</select>
 
 			<button class="w-100 btn btn-lg btn-primary" type="submit" id="newUser">Créer le compte</button>
