--- a/templates/shared/_navbar.html.twig
+++ b/templates/shared/_navbar.html.twig
@@ -8,7 +8,7 @@
 			<ul class="navbar-nav me-auto">
 				{% for c in  categoryRepository.findAll()%}
 					<li class="nav-item">
-						<a class="nav-link active" href="#">{{c.nom}}</a>
+						<a class="nav-link active" href="/{{c.slug}}">{{c.nom}}</a>
 					</li>
 				{% endfor %}
 				<li class="nav-item dropdown">
@@ -25,7 +25,7 @@
 			<ul class="navbar-nav">
 				{% if app.user %}
 					<li class="nav-item">
-						<a class="btn btn-danger" href="#">Logout</a>
+						<a class="btn btn-danger" href="{{path('app_logout')}}">Logout</a>
 					</li>
 				{% else %}
 					<li class="nav-item">
