--- a/templates/product/category.html.twig
+++ b/templates/product/category.html.twig
@@ -16,8 +16,8 @@
 	</nav>
 
 	<h1 style="color:#e15a97; text-shadow: 2px 8px 6px rgba(0,0,0,0.2),
-																																																																																																	0px -5px 35px rgba(255,255,255,0.3),
-																																																																																																	1px 1px 1px rgba(0,0,0,0.7);">
+																																																																																																										0px -5px 35px rgba(255,255,255,0.3),
+																																																																																																										1px 1px 1px rgba(0,0,0,0.7);">
 		<span class="badge bg-dark">Catégorie :
 			{{category.nom}}</span>
 	</h1>
@@ -28,7 +28,7 @@
 					<img src="{{p.image}}" class="img-fluid" alt="Image du produit" style="width: 400px; height:260px; border-radius: 6%;">
 				</div>
 				<div class="card-body">
-					<h4 class="card-title">{{p.nom}}
+					<h4 class="card-title mt-3">{{p.nom}}
 						({{p.prix}}
 						&euro;)</h4>
 					<h5>
