--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,10 +20,17 @@
 	<body>
 		{# <body style="background-color : #ffffff;"> #}
 		{% include "shared/_navbar.html.twig" %}
-		<div class="container pt-5"> {% block body %}{% endblock %}
-			</div>
-			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-			{% block javascripts %}{% endblock %}
-
-		</body>
-	</html>
+		<div class="container pt-5">
+			{% for rubrique,messages in app.flashes %}
+				<div class="alert alert-{{rubrique}}">
+					{% for message in messages %}
+						<p>{{ message }}</p>
+					{% endfor %}
+				</div>
+			{% endfor %}
+			{% block body %}{% endblock %}
+		</div>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+		{% block javascripts %}{% endblock %}
+	</body>
+</html></body></body></html>
