--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -4,12 +4,12 @@
 {% endblock %}
 {% block body %}
 	<h1 style="color:black;text-shadow:
-				-1px -1px 0 #fff,
-				1px -1px 0 #fff,
-				-1px 1px 0 #fff,
-				1px 1px 0 #fff,
-				1px 1px 2px #141414;
-				color:#333;font-size: 3em;">NOS OFFRES SPÉCIALES !</h1>
+																-1px -1px 0 #fff,
+																1px -1px 0 #fff,
+																-1px 1px 0 #fff,
+																1px 1px 0 #fff,
+																1px 1px 2px #141414;
+																color:#333;font-size: 3em;">NOS OFFRES SPÉCIALES !</h1>
 	<div class="row">
 		<div class="morph d-flex justify-content-center">
 			{% for p in products %}
@@ -29,7 +29,7 @@
 						<p class="card-text">{{p.designation}}</p>
 
 						<a href=" {{path('product_show', {'category_slug' : p.category.slug, 'slug': p.slug} )}}" class="btn btn-primary btn-sm">Détails</a>
-						<a href="#" class="btn btn-success btn-sm">Ajouter</a>
+						<a href="{{path('panier_add', {'id': p.id })}}" class="btn btn-success btn-sm">Ajouter</a>
 					</div>
 				</div>
 			{% endfor %}
