--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -43,7 +43,7 @@
 				</div>
 
 				<span class="mx-5">
-					<a href="#" class="btn btn-success btn-lg m-auto text-center mt-1">
+					<a href="{{path('panier_add',{'id': product.id})}}" class="btn btn-success btn-lg m-auto text-center mt-1">
 						<i class="fas fa-cart-plus"></i>
 						Ajouter au panier
 					</a>
