--- a/templates/shared/_navbar.html.twig
+++ b/templates/shared/_navbar.html.twig
@@ -23,6 +23,12 @@
 				</li>
 			</ul>
 			<ul class="navbar-nav">
+				<li class="nav-item">
+					<a class="nav-link" href="{{path('panier_show')}}">
+						<i class="fas fa-shopping-cart"></i>
+						Panier
+					</a>
+				</li>
 				{% if app.user %}
 					<li class="nav-item">
 						<a class="btn btn-danger" href="{{path('app_logout')}}">Logout</a>
@@ -35,8 +41,8 @@
 						<a class="btn btn-success" href="{{path('registration_form')}}">Register</a>
 					</li>
 				{% endif %}
-			</ul>
+			</li>
+		</ul>
 
-		</div>
 	</div>
-</nav>
+</div></nav>
