--- a/templates/product/category.html.twig
+++ b/templates/product/category.html.twig
@@ -16,14 +16,14 @@
 	</nav>
 
 	<h1 style="color:#e15a97; text-shadow: 2px 8px 6px rgba(0,0,0,0.2),
-																																																																																																																																		0px -5px 35px rgba(255,255,255,0.3),
-																																																																																																																																		1px 1px 1px rgba(0,0,0,0.7);">
+																																																																																																																																																																																																																							0px -5px 35px rgba(255,255,255,0.3),
+																																																																																																																																																																																																																							1px 1px 1px rgba(0,0,0,0.7);">
 		<span class="badge bg-dark">Catégorie :
 			{{category.nom}}</span>
 	</h1>
 	<div class="row">
 		{% for p in category.products%}
-			<div class="col-3">
+			<div class="col-sm-6 col-md-4 col-lg-3">
 				<div class="card" style="border-radius: 6%;">
 					<img src="/uploads/images/{{p.image}}" class="img-fluid" alt="Image du produit" style="width: 400px; height:260px; border-radius: 6%;">
 				</div>
