--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -4,20 +4,23 @@
 {% endblock %}
 {% block body %}
 	<h1 style="color:black;text-shadow:
-																-1px -1px 0 #fff,
-																1px -1px 0 #fff,
-																-1px 1px 0 #fff,
-																1px 1px 0 #fff,
-																1px 1px 2px #141414;
-																color:#333;font-size: 3em;">NOS OFFRES SPÉCIALES !</h1>
-	<div class="row">
-		<div class="morph d-flex justify-content-center">
+				-1px -1px 0 #fff,
+				1px -1px 0 #fff,
+				-1px 1px 0 #fff,
+				1px 1px 0 #fff,
+				1px 1px 2px #141414;
+				color:#333;font-size: 3em;">NOS OFFRES SPÉCIALES !</h1>
+	<div class="morph d-flex justify-content-center">
+		<div class="row">
+
+
 			{% for p in products %}
-				<div class="col">
+				<div class="col-md-6 col-lg-4">
+
 					<div class="card align-items-center mx-2 bg-light">
 						<img src="/uploads/images/{{p.image}}" class="img-fluid" alt="Image du produit">
 					</div>
-					<div class="card-body">
+					<div class=" card-body">
 						<h4 class="card-title mt-3">{{p.nom}}
 							({{p.prix}}
 							&euro;)</h4>
@@ -30,11 +33,14 @@
 
 						<a href=" {{path('product_show', {'category_slug' : p.category.slug, 'slug': p.slug} )}}" class="btn btn-primary btn-sm">Détails</a>
 						<a href="{{path('panier_add', {'id': p.id })}}" class="btn btn-success btn-sm">Ajouter</a>
+
 					</div>
 				</div>
 			{% endfor %}
+
 		</div>
 	</div>
+
 	<hr>
 	<h1 style="color:#e15a97; text-shadow: 2px 8px 6px rgba(0,0,0,0.2), 0px -5px 35px rgba(255,255,255,0.3), 1px 1px 1px rgba(0,0,0,0.7);">
 		<span class="badge bg-secondary">Un service irréprochable</span>
