--- a/templates/shared/_navbar.html.twig
+++ b/templates/shared/_navbar.html.twig
@@ -31,6 +31,9 @@
 				</li>
 				{% if app.user %}
 					<li class="nav-item">
+						<a href="{{path('commandes_index')}}" class="nav-link">Mes Commandes</a>
+					</li>
+					<li class="nav-item">
 						<a class="btn btn-danger" href="{{path('app_logout')}}">Logout</a>
 					</li>
 				{% else %}
