Correction bug sur les roles

--- a/templates/registration.html.twig
+++ b/templates/registration.html.twig
@@ -39,6 +39,7 @@
 				<option value="ROLE_USER" selected>Sélectioner un rôle</option>
 				<option value="ROLE_SUPER_ADMIN">Administrateur</option>
 				<option value="ROLE_MOD">Modérateur</option>
+				<option value="ROLE_CLI">Client</option>
 			</select>
 
 			<button class="w-100 btn btn-lg btn-primary" type="submit" id="newUser">Créer le compte</button>
