--- a/templates/show_users.html.twig
+++ b/templates/show_users.html.twig
@@ -136,10 +136,8 @@
 							<select class="form-select mb-2" aria-label="Default select example" name="role" id="selrole" required>
 								<option value="ROLE_USER" selected>Sélectioner un rôle</option>
 								<option value="ROLE_SUPER_ADMIN">Administrateur</option>
-								<option value="ROLE_COMPTA">Comptabilite</option>
-								<option value="ROLE_CHEF">Chef-chantier</option>
-								<option value="ROLE_CONDUCTEUR">Conducteur-Travaux</option>
-								<option value="ROLE_RESPONSABLE">Responsable</option>
+								<option value="ROLE_MOD">Modérateur</option>
+								<option value="ROLE_CLI">Client</option>
 							</select>
 						</div>
 					</div>
