--- a/templates/shared/_navbar.html.twig
+++ b/templates/shared/_navbar.html.twig
@@ -11,16 +11,18 @@
 						<a class="nav-link active" href="/{{c.slug}}">{{c.nom}}</a>
 					</li>
 				{% endfor %}
-				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-					<div class="dropdown-menu">
-						<a class="dropdown-item" href="#">Action</a>
-						<a class="dropdown-item" href="#">Another action</a>
-						<a class="dropdown-item" href="#">Something else here</a>
-						<div class="dropdown-divider"></div>
-						<a class="dropdown-item" href="#">Separated link</a>
-					</div>
-				</li>
+				{% if is_granted('ROLE_SUPER_ADMIN') %}
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">GESTION</a>
+						<div class="dropdown-menu">
+							<a class="dropdown-item" href="{{path('Users_all')}}">Gestion des utilisateurs</a>
+							<a class="dropdown-item" href="#">Gestion des catégories</a>
+							<a class="dropdown-item" href="#">Gestion des produits</a>
+							<div class="dropdown-divider"></div>
+							<a class="dropdown-item" href="#">Separated link</a>
+						</div>
+					</li>
+				{% endif %}
 			</ul>
 			<ul class="navbar-nav">
 				<li class="nav-item">
