--- a/templates/panier/index.html.twig
+++ b/templates/panier/index.html.twig
@@ -53,5 +53,11 @@
 			</tr>
 		</tfoot>
 	</table>
-
+	<hr>
+	<h2>Confirmez votre commande en remplissant ce formulaire
+	</h2>
+	{{form_start(confirmationForm, {'action': path(panier_confirmation)})}}
+	{{form_widget(confirmationForm)}}
+	<button type="submit" class="btn btn-success">Je confirme!</button>
+	{{form_end(confirmationForm)}}
 {% endblock %}
