Mise en place des commandes

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -4,12 +4,12 @@
 {% endblock %}
 {% block body %}
 	<h1 style="color:black;text-shadow:
-				-1px -1px 0 #fff,
-				1px -1px 0 #fff,
-				-1px 1px 0 #fff,
-				1px 1px 0 #fff,
-				1px 1px 2px #141414;
-				color:#333;font-size: 3em;">NOS OFFRES SPÉCIALES !</h1>
+																																																																																																																																												-1px -1px 0 #fff,
+																																																																																																																																												1px -1px 0 #fff,
+																																																																																																																																												-1px 1px 0 #fff,
+																																																																																																																																												1px 1px 0 #fff,
+																																																																																																																																												1px 1px 2px #141414;
+																																																																																																																																												color:#333;font-size: 3em;">NOS OFFRES SPÉCIALES !</h1>
 	<div class="morph d-flex justify-content-center">
 		<div class="row">
 
@@ -45,8 +45,10 @@
 	<h1 style="color:#e15a97; text-shadow: 2px 8px 6px rgba(0,0,0,0.2), 0px -5px 35px rgba(255,255,255,0.3), 1px 1px 1px rgba(0,0,0,0.7);">
 		<span class="badge bg-secondary">Un service irréprochable</span>
 	</h1>
-	<p>Les 3 bonnes raisons de choisir PhoneShop</p>
-	<div class="row">
+	<p>
+		<strong>Les 3 bonnes raisons de choisir PhoneShop</strong>
+	</p>
+	<div class="row d-flex justify-content-between" style="font-weight: 500;">
 		{% include "shared/_assurance.html.twig" with {
 		            'color': 'primary',
 		            'icone':'fas fa-truck',
@@ -64,9 +66,9 @@
 		{% include "shared/_assurance.html.twig" with {
 		            'color': 'warning',
 		            'icone':'fas fa-lock',
-		            'text' : "Un site sécurisé PhoneShop vous assure des achats 100% protégés grâce à la  technologie SSL utilisée sur toutes les pages du site et un paiement en ligne 100% sécurisé avec HiPay"
-		
-		}
+		            'text' : "Un site sécurisé PhoneShop vous assure des achats 100% protégés grâce à la  technologie SSL utilisée sur toutes les pages du site et un paiement en ligne 100% sécurisé avec HiPay                                                                                     
+					
+					                                                                                          "	}
 		%}
 
 
