--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,7 +1,7 @@
 body {
     color: #333;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 14px;
+    font-family: Arial, sans-serif;
+    font-size: 16px;
     line-height: 1.42857143;
     margin: 0;
 }
