--- a/templates/shared/_assurance.html.twig
+++ b/templates/shared/_assurance.html.twig
@@ -1,10 +1,11 @@
-<div class="col">
-			<div class="card bg-{{ color }} text-white text-center">
-				<div class="card-body">
-					<i class="{{ icone }} fa-2x mb-3"></i>
-					<p class="card-text">{{ text }}</p>
-				</div>
-			
-			</div>
-		
-		</div>
+<div class="card" style="max-width: 24rem;">
+	<div class="card-header bg-{{color}} text-center">
+		<i class="{{ icone }} fa-2x mb-2 mt-2"></i>
+	</div>
+	<div class="card-body text-white bg-dark text-center">
+
+
+		<p class="card-text">{{ text }}</p>
+	</div>
+
+</div>
