Liste des catégories OK

--- a/templates/show_users.html.twig
+++ b/templates/show_users.html.twig
@@ -77,8 +77,7 @@
 								</span>
 							</td>
 						</tr>
-						{% endif%}
-					</tbody>
+						{% endif%}</tbody>
 				</tbody>
 			</table>
 			<div class="float-end">
