--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,6 +1,6 @@
 body {
     color: #333;
-    font-family: Arial, sans-serif;
+    font-family: Verdana, Arial, Garamond, sans-serif;
     font-size: 16px;
     line-height: 1.42857143;
     margin: 0;
