--- a/templates/panier/index.html.twig
+++ b/templates/panier/index.html.twig
@@ -64,8 +64,11 @@
 		<button type="submit" class="btn btn-success">Je confirme!</button>
 		{{form_end(form)}}
 	{% else %}
-		<h2>Connectez-vous pour confirmer votre commande</h2>
-		<a href="{{ path('app_login') }}" class="btn btn-primary">Se connecter</a>
+		<h2>Connectez-vous pour confirmer votre commande
+			<a href="{{ path('app_login') }}" class="btn btn-primary">Se connecter</a>
+			ou
+			<a href="{{ path('registration_form') }}" class="btn btn-success">Créer un compte</a>
+		</h2>
 	{% endif %}
 {% else %}
 	<h2>Votre panier est vide !</h2>
