--- a/templates/shared/_navbar.html.twig
+++ b/templates/shared/_navbar.html.twig
@@ -17,7 +17,7 @@
 						<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">GESTION</a>
 						<div class="dropdown-menu">
 							<a class="dropdown-item" href="{{path('Users_all')}}">Gestion des utilisateurs</a>
-							<a class="dropdown-item" href="#">Gestion des catégories</a>
+							<a class="dropdown-item" href="{{path('category_show')}}">Gestion des catégories</a>
 							<a class="dropdown-item" href="#">Gestion des produits</a>
 							<div class="dropdown-divider"></div>
 							<a class="dropdown-item" href="#">Separated link</a>
