Color Font Awesome Icons

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -4,12 +4,12 @@
 {% endblock %}
 {% block body %}
 	<h1 style="color:black;text-shadow:
-																																																																																																																																												-1px -1px 0 #fff,
-																																																																																																																																												1px -1px 0 #fff,
-																																																																																																																																												-1px 1px 0 #fff,
-																																																																																																																																												1px 1px 0 #fff,
-																																																																																																																																												1px 1px 2px #141414;
-																																																																																																																																												color:#333;font-size: 3em;">NOS OFFRES SPÉCIALES !</h1>
+																																																																																																																																																																																																																				-1px -1px 0 #fff,
+																																																																																																																																																																																																																				1px -1px 0 #fff,
+																																																																																																																																																																																																																				-1px 1px 0 #fff,
+																																																																																																																																																																																																																				1px 1px 0 #fff,
+																																																																																																																																																																																																																				1px 1px 2px #141414;
+																																																																																																																																																																																																																				color:#333;font-size: 3em;">NOS OFFRES SPÉCIALES !</h1>
 	<div class="morph d-flex justify-content-center">
 		<div class="row">
 
@@ -50,21 +50,21 @@
 	</p>
 	<div class="row d-flex justify-content-between" style="font-weight: 500;">
 		{% include "shared/_assurance.html.twig" with {
-		            'color': 'primary',
+		            'color': '#ff33cc',
 		            'icone':'fas fa-truck',
 		            'text' : "Une livraison rapide et soignée Grâce à notre partenaire logistique, nous nous engageons à expédier le jour même toute commande passée avant 13H du lundi au vendredi pour une livraison soignée en 24 ou 48h."
 		
 		}
 		%}
 		{% include "shared/_assurance.html.twig" with {
-		            'color': 'success',
+		            'color': '#ffff00',
 		            'icone':'fas fa-check',
 		            'text' : "Des conseils d'experts Passionnée par la téléphonie, la radiocommunication et les produits high tech, notre équipe de conseillers qualifiés est à votre écoute pour vous accompagner avant et après votre achat"
 		
 		}
 		%}
 		{% include "shared/_assurance.html.twig" with {
-		            'color': 'warning',
+		            'color': '#0066ff',
 		            'icone':'fas fa-lock',
 		            'text' : "Un site sécurisé PhoneShop vous assure des achats 100% protégés grâce à la  technologie SSL utilisée sur toutes les pages du site et un paiement en ligne 100% sécurisé avec HiPay                                                                                     
 					
