--- a/templates/shared/_assurance.html.twig
+++ b/templates/shared/_assurance.html.twig
@@ -1,8 +1,8 @@
 <div class="card" style="max-width: 24rem;">
-	<div class="card-header bg-{{color}} text-center">
-		<i class="{{ icone }} fa-2x mb-2 mt-2"></i>
+	<div class="card-header bg-secondary text-center">
+		<i class="{{ icone }} fa-2x mb-2 mt-2" style="color:{{color}};"></i>
 	</div>
-	<div class="card-body text-white bg-dark text-center">
+	<div class="card-body text-dark bg-info text-center">
 
 
 		<p class="card-text">{{ text }}</p>
