--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -34,13 +34,13 @@
 				</span>
 			</h4>
 
-			<p>{{product.designation}}</p>
+			<p style="font-size: 20px; font-weight:600; text-align: justify;">{{product.designation}}</p>
 			<div class="d-flex flex-row justify-between align-center">
 				<div class="card border-warning mb-3" style="max-width: 18rem;">
 					<div class="card-header">Avis</div>
 					<div class="card-body">
-						<h5 class="card-title">****</h5>
-						<p class="card-text">{{product.avis}}</p>
+						<h5 class="card-title" style="color: yellow;font-size: 38px;font-weight:900;">****</h5>
+						<p class="card-text" style="text-align: justify;">{{product.avis}}</p>
 					</div>
 				</div>
 
