--- a/templates/shared/_assurance.html.twig
+++ b/templates/shared/_assurance.html.twig
@@ -2,7 +2,7 @@
 	<div class="card-header bg-secondary text-center">
 		<i class="{{ icone }} fa-2x mb-2 mt-2" style="color:{{color}};"></i>
 	</div>
-	<div class="card-body text-dark bg-info text-center">
+	<div class="card-body text-dark bg-info text-justify">
 
 
 		<p class="card-text">{{ text }}</p>
