--- a/templates/shared/_navbar.html.twig
+++ b/templates/shared/_navbar.html.twig
@@ -18,7 +18,7 @@
 						<div class="dropdown-menu">
 							<a class="dropdown-item" href="{{path('Users_all')}}">Gestion des utilisateurs</a>
 							<a class="dropdown-item" href="{{path('category_show')}}">Gestion des catégories</a>
-							<a class="dropdown-item" href="#">Gestion des produits</a>
+							<a class="dropdown-item" href="{{path('product_all')}}">Gestion des produits</a>
 							<div class="dropdown-divider"></div>
 							<a class="dropdown-item" href="#">Separated link</a>
 						</div>
