--- a/templates/product/product_list.html.twig
+++ b/templates/product/product_list.html.twig
@@ -54,7 +54,7 @@
 									</a>
 								</span>
 
-								<span title="Supprimer" class="modalClick" name="supprUser" data-bs-toggle="modal" data-bs-target="#deleteEmployeeModal">
+								<span title="Supprimer" class="modalClick" name="supprUser" data-bs-toggle="modal" data-bs-target="#deleteArticleModal">
 									<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="red" class="bi bi-trash" viewbox="0 0 16 16" data-toggle="tooltip" title="Delete">
 										<path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
 										<path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
@@ -109,4 +109,38 @@
 
 			{% endfor %}
 			<li class={{ (page==pages) ? "disabled" : ''}}>
-				<a class="page-link"
+				 <a class="page-link" href="{{ (page<pages)? '?page='~(page +1): ''}}" aria-label="Next">
+                            <span aria-hidden="true">&#155;</span>
+                          </a>
+                    </li>
+                    <li class={{ (page==pages) ? "disabled" : ''}}>
+                          <a class="page-link" href="?page={{ pages }}" aria-label="Last">
+                            <span aria-hidden="true">&raquo;</span>
+                          </a>
+                    </li>
+                </ul>   
+        	</nav>
+   	
+   	</div>
+   <!-- Delete Modal HTML -->
+<div class="modal fade" id="deleteArticleModal" tabindex="-1" aria-labelledby="supprunarticle" aria-hidden="true">
+	<div class="modal-dialog">
+		<div class="modal-content">
+				<div class="modal-header">						
+					<h4 class="modal-title">Supprimer un Article</h4>
+					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-hidden="true" aria-label="Close"></button>
+				</div>
+				<div class="modal-body">					
+					<p>Êtes-vous sûr de vouloir supprimer cet article ?</p>
+					<p class="text-warning"><small>Cette action est irréversible !</small></p>
+				</div>
+				<div id='alertSuppr' class= "alert alert-success" role="alert" style='display:none;'></div> 
+				<div class="modal-footer">
+					<input type="button" class="btn btn-default" data-bs-dismiss="modal" value="Annuler">
+					<input data-article="" data-dismiss="dialog" id="btnSupprArticle" type="submit" class="btn btn-danger" value="Supprimer">
+				</div>
+			
+		</div>
+	</div>
+</div>
+{% endblock %}
