--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -37,16 +37,18 @@
 			<p style="font-size: 20px; font-weight:600; text-align: justify;">{{product.designation}}</p>
 			<div class="d-flex flex-row justify-between align-center">
 				{% for a in product.avis%}
-					<div class="card border-warning mb-3" style="max-width: 18rem;">
-						<div class="card-header">Avis</div>
-						<div class="card-body">
-							<h5 class="card-title" style="color: yellow;font-size: 38px;font-weight:900;">****</h5>
-							<p class="card-text" style="text-align: justify;">{{a.contenu}}
-								<br>Publié le :
-								{{a.dateavis | date('d/m/Y H:i')}}
-								<br>
-								Par:
-								{{a.user.fullName}}</p>
+					<div class="col mx-1">
+						<div class="card border-warning mb-3" style="max-width: 18rem;">
+							<div class="card-header">Avis</div>
+							<div class="card-body">
+								<h5 class="card-title" style="color: yellow;font-size: 38px;font-weight:900;">****</h5>
+								<p class="card-text" style="text-align: justify;">{{a.contenu}}
+									<br>Publié le :
+									{{a.dateavis | date('d/m/Y H:i')}}
+									<br>
+									Par:
+									{{a.user.fullName}}</p>
+							</div>
 						</div>
 					</div>
 				{% endfor %}
